2006-01-28  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - tests for http://bugzilla.opendarwin.org/show_bug.cgi?id=6550
          REGRESSION: window.open('myurl', '_self') fails to load myurl in current window

        * fast/dom/Window/window-open-parent.html: Added.
        * fast/dom/Window/window-open-parent-no-parent.html: Added.
        * fast/dom/Window/window-open-self.html: Added.
        * fast/dom/Window/window-open-top.html: Added.

        * fast/dom/Window/resources: Added.
        * fast/dom/Window/resources/destination.html: Added.
        * fast/dom/Window/window-open-parent-expected.txt: Added.
        * fast/dom/Window/window-open-parent-no-parent-expected.txt: Added.
        * fast/dom/Window/window-open-self-expected.txt: Added.
        * fast/dom/Window/window-open-top-expected.txt: Added.

2006-01-20  Darin Adler  <darin@apple.com>

        - added a test for the names of range exceptions, which were wrong
          in my last commit until I made the fix Alexey suggested

        * fast/dom/Range: Added.
        * fast/dom/Range/range-exceptions.html: Added.
        * fast/dom/Range/resources: Added.
        * fast/dom/Range/resources/range-exceptions.js: Added.
        * fast/dom/Range/resources/TEMPLATE.html: Added.

        * fast/js/resources/js-test-pre.js: Escape & and < characters in the
        output so you can have tests with HTML fragments as expected results.

2006-01-29  David Harrison  <harrison@apple.com>

        Adding test cases for:
        1) Arrowing up or down to an empty list item skipped the list item
        2) Deleting the content of a list item made it so you could never get the cursor inside the empty item

        * editing/selection/move-by-line-002-expected.png: Added.
        * editing/selection/move-by-line-002-expected.checksum: Added.
        * editing/selection/move-by-line-002-expected.txt: Added.
        * editing/selection/move-by-line-002.html: Added.