@@ -1,0 +1,59 @@
+<p>
+This tests for a regression against
+<i><a href="http://bugzilla.opendarwin.org/show_bug.cgi?id=6888">http://bugzilla.opendarwin.org/show_bug.cgi?id=6888</a>
+Collapsed borders appear on the wrong side or on the wrong cell in RTL tables</i>.
+</p>
+<p>
+The RTL table should be a mirror image of the LTR table.
+</p>
+<hr>
+<table cellpadding="4" cellspacing="0" style="text-align: -khtml-center;">
+<tr>
+<td style="border-right: 1px solid black;">RTL</td>
+<td>LTR</td>
+</tr>
+<tr>
+<td style="border-right: 1px solid black;">
+    <table style="direction:rtl; border-collapse: collapse; border-left: 2px solid red; border-right: 2px solid blue;">
+        <col>
+        <col>
+        <col style="background: yellow; border-right: 2px green dotted; border-left: solid 1px;">
+        <col style="background: silver;">
+        <tr>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td colspan="2" style="">&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <td style="border-right: 4px solid maroon;">&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+        </tr>
+    </table>
+</td>
+<td>    
+    <table style="direction:ltr; border-collapse: collapse; border-right: 2px solid red; border-left: 2px solid blue;">
+        <col>
+        <col>
+        <col style="background: yellow; border-left: 2px green dotted; border-right: solid 1px;">
+        <col style="background: silver;">
+        <tr>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td colspan="2" style="">&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <td style="border-left: 4px solid maroon;">&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;</td>
+        </tr>
+    </table>
+</td>
+</tr>
+</table>
