@@ -1,3 +1,15 @@
+2006-01-29  Mitz Pettel  <opendarwin.org@mitzpettel.com>
+
+        Reviewed by Darin.
+
+        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6888
+          Collapsed borders appear on the wrong side or on the wrong cell in RTL tables
+
+        * fast/table/border-collapsing/rtl-border-collapsing.html: Added.
+        * fast/table/border-collapsing/rtl-border-collapsing-expected.txt: Added.
+        * fast/table/border-collapsing/rtl-border-collapsing-expected.checksum: Added.
+        * fast/table/border-collapsing/rtl-border-collapsing-expected.png: Added.
+
 2006-01-28  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
